fetching the spent time for exam and question/ change the report msg based on result/change the dashboard logo img's

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -93,7 +93,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Arvind Singh <br> <span>VP (Operations)</span></p>
+                                        <p>Shantanu Kumar <br> <span>VP (Operations)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -107,7 +107,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Deepak Singh <br> <span>VP (Content)</span></p>
+                                        <p>Vipul Ray <br> <span>VP (Content)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -121,7 +121,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Vishal Singh <br> <span>CTO</span></p>
+                                        <p>Badal Pal <br> <span>CTO</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -135,20 +135,20 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Imran Rashid <br> <span>VP (Product)</span></p>
+                                        <p>Aman Kumar <br> <span>VP (Product)</span></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="col-lg-4 col-md-6 col-sm-6 teamColumn">
                                 <div class="card" data-aos="flip-right" data-aos-duration="2000">
                                     <div class="teamImage">
-                                        <img src="assets/img/AnjaliMishra.svg" alt="">
+                                        <img src="assets/img/ArvindSingh.svg" alt="">
                                         <a class="linkedinIcon" href="https://www.linkedin.com/in/anjali-mishra-a03998a6" target="_blank">
                                             <img src="assets/img/linkdin.png" alt="">
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Anjali Mishra <br> <span>VP (Acad Operations)</span></p>
+                                        <p>Yash Trivedi <br> <span>VP (Acad Operations)</span></p>
                                     </div>
                                 </div>
                             </div>
@@ -162,7 +162,7 @@
                                         </a>
                                     </div>
                                     <div class="namePosition">
-                                        <p>Rohit Singh <br> <span>VP (Engineering)</span></p>
+                                        <p>Mohit Singh<br> <span>VP (Engineering)</span></p>
                                     </div>
                                 </div>
                             </div>
