--- a/src/app/exam/report/report.component.css
+++ b/src/app/exam/report/report.component.css
@@ -1,5 +1,32 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
 
+#disply-container{
+  text-align: center;
+}
+/* .alertMsg{
+  color: red;
+  font-size: 400;
+} */
+.alertMsg {
+  color: transparent;
+  background-image: linear-gradient(45deg, #ff0000, #fb025d, #000000, #fb0000);
+  -webkit-background-clip: text;
+  background-clip: text;
+  animation: textGradientAnimation 4s ease infinite;
+  background-size: 400% 400%; 
+}
+
+@keyframes textGradientAnimation {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+}
 .practiceReport {
     padding: 5vh 0vh;
   }
@@ -270,4 +297,6 @@
       margin-bottom: 10px;
     }
   }
-  
+  .backToChapter{
+    text-align: left;
+  }
