--- a/src/app/exam/report/report.component.html
+++ b/src/app/exam/report/report.component.html
@@ -1,9 +1,9 @@
 <div class="disply-container" id="disply-container">
-    <span>Note- dont't refresh/leave these page before download your report card!</span>
+    <span class="alertMsg">Note- dont't refresh/leave these page before download your report card!</span>
     <div class="container practiceReport" id="printinvoice">
         <div class="row reportFirstRow">
             <div class="backToChapter">
-                <a class="btn" target="_blank" (click)="generatePDF()"><span><i class="fas fa-arrow-down"></i></span>
+                <a class="btn" target="_blank" (click)="generatePDF()" id="btnColor"><span><i class="fas fa-arrow-down"></i></span>
                     Download Report</a>&nbsp;
             </div>
             <!-- <span><a >Practice agian</a></span> -->
@@ -79,36 +79,28 @@
                     <div class="row">
                         <div class="col-xl-8 col-lg-12">
                             <div>
-                                <h2 *ngIf="excellent"><span>Excellent!</span> Well done! Keep it Up!.</h2>
-                                <h2 *ngIf="average"><span style="color: orange;">Going Good!</span> Keep Practicing.
+                                <h2 *ngIf="resultPrediction >= 85"><span>Excellent!</span> Well done! Keep it Up!.</h2>
+                                <h2 *ngIf="resultPrediction >= 60 && resultPrediction <= 84"><span style="color: orange;">Going Good!</span> Keep Practicing.
                                 </h2>
-                                <h2 *ngIf="poor"><span style="color: orangered;">Oops!</span> You didn't perform well
-                                    this time. You need to Practice more.</h2>
-                                <h2 *ngIf="!excellent && !average && !poor"><span style="color: blue;">Hmm!</span> No
-                                    Attempt Record Found. Keep Practicing!</h2>
+                                <h2 *ngIf="resultPrediction <= 40"><span style="color: orangered;">Oops!</span> You didn't perform well this time. You need to Practice more.</h2>
+                                <h2 *ngIf="resultPrediction >= 40 && resultPrediction <=59"><span style="color: blue;">Hmm!</span>
+                                      You Need To Practice More!</h2>
                             </div>
                             <div>
-                                <p *ngIf="excellent">You are excellent in <b>{{ excellent }}</b> chapter. Well done,
-                                    keep it up!
+                                <p *ngIf="resultPrediction >= 85">You are excellent in <b>{{ resultPrediction }}%</b> chapter. Well done, keep it up!
                                 </p>
-                                <p *ngIf="poor">You couldn't make in the chapter <b>{{ poor }}</b> and need more
-                                    practice :(
+                                <p *ngIf="resultPrediction >= 60 && resultPrediction <= 84">You are Good in <b>{{ resultPrediction }}%</b> chapter. Well done, keep it up!
                                 </p>
-                                <p *ngIf="average">You are doing good enough in {{average}} chapter. But you need more
+                                <p *ngIf="average">You are doing good enough in {{resultPrediction}}% chapter. But you need more
                                     practice.
                                 </p>
-                                <p *ngIf="!excellent && !average && !poor && hasSubjective">It seems you attempted all
-                                    the subjective questions, and our system doesn't evaluate subjective category, hence
-                                    we suggest you to review the answers on your own :)
-                                </p>
-                                <p *ngIf="!excellent && !average && !poor && !hasSubjective">It seems you did not
-                                    attempt any question.
+                                <p *ngIf="resultPrediction <= 40">Its Seem You have not study well these time, Try to do better next Time. BETTER LUCK NEXT TIME :)
                                 </p>
                             </div>
                         </div>
                         <div class="col-xl-4 col-lg-12">
                             <div>
-                                <button class="btn">review questions</button>
+                                <button class="btn">Take Re-Test</button>
                             </div>
                         </div>
                     </div>
