--- a/src/app/exam/report/report.component.css
+++ b/src/app/exam/report/report.component.css
@@ -1,5 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&display=swap");
 
+.clockImg {
+  position: relative;
+  width: 140px;
+  height: 140px;
+  /* border: 1px solid black; */
+  overflow: hidden; /* Ensure that the image doesn't overflow the container */
+}
+
+.clockImg img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* Maintain aspect ratio while covering the entire container */
+}
 #disply-container{
   text-align: center;
 }
