--- a/src/app/exam/report/report.component.html
+++ b/src/app/exam/report/report.component.html
@@ -1,5 +1,5 @@
 <div class="disply-container" id="disply-container">
-    <span class="alertMsg">Note- dont't refresh/leave these page before download your report card!</span>
+    <span class="alertMsg">Note- dont't leave these page before download your report card!</span>
     <div class="container practiceReport" id="printinvoice">
         <div class="row reportFirstRow">
             <div class="backToChapter">
@@ -81,7 +81,7 @@
                                 <h5>{{totalTimeSpentForExam}} Min</h5>
                             </div>
                             <div>
-                                <h6>time to solve test</h6>
+                                <h6>to solve test</h6>
                             </div>
                         </div>
                         <div class="col-md-6">
