Remove the dropdown from register page to select the group of user and fill it default

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -9,7 +9,7 @@
                         <h3>"The whole purpose of education is to turn mirrors into windows." <br> <span>Sydney J.
                                 Warriors</span></h3>
                         <p>
-                            MMP offers detailed information and the right tools for exam preparation ranging from K-12,
+                            Absolute study offers detailed information and the right tools for exam preparation ranging from K-12,
                             Olympiads, NTSE, entrance exams and government recruitment exams. The idea behind this platform
                             is to offer students a single platform for all sorts/categories of examinations.
                         </p>
@@ -17,7 +17,7 @@
                             Our <span>AI-Enabled Make My Path</span> section will help you to set your goal and will
                             recommend best path
                             to achieve the same in minimum possible time. We believe learning always happens in groups, so
-                            MMP enables teachers to create groups and share assignments and papers with their students.
+                            Absolute study enables teachers to create groups and share assignments and papers with their students.
                         </p>
                     </div>
                 </div>
@@ -206,8 +206,8 @@
                     </div>
                 </div>
             </div>
-            <div class="footer">
-                <!-- <app-footer></app-footer> -->
+            <div class="footer mt-5">
+                <app-footer></app-footer>
             </div>
         </div>
     </div>
