--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -12,7 +12,7 @@
                 <hr>
             </div>
         </div> -->
-        <div class="row topRow">
+        <div class="row topRow mt-5">
             <div class="col-lg-4 col-md-12">
                 <div class="row contactDetailsRow">
                     <div class="col-lg-12 col-md-6">
@@ -69,5 +69,8 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1058.3094796064968!2d80.99469859354599!3d26.849028678916863!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x399be2d015555555%3A0xcae70fb47564e174!2sLogimetrix%20Techsolutions%20Pvt.%20Ltd.!5e0!3m2!1sen!2sin!4v1703309748843!5m2!1sen!2sin" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </div>
         </div>
+    </div>
+    <div class="footer col-md-12">
+        <app-footer></app-footer>
     </div>
 </div>
