--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
                     <div><h2>Quick Links</h2></div>
                 </div>
                 <ul>
-                    <li><a href="javascript:void(0)" routerLink= "/about-us">About</a></li>
+                    <li><a href="javascript:void(0)" target="_blank" href="https://www.indiamart.com/logimetrix/aboutus.html">About</a></li>
                     <li><a href="javascript:void(0)" >Goals</a></li>
                     <li><a href="javascript:void(0)" >Association</a></li>
                     <li><a href="javascript:void(0)" >FAQ</a></li>
@@ -23,8 +23,8 @@
                     <div><h2>Help</h2></div>
                 </div>
                 <ul>
-                    <li><a href="javascript:void(0)" routerLink="/contact-Ust">Contact Us</a></li>
-                    <li><a href="javascript:void(0)" routerLink="/post-your-query">Post Query</a></li>
+                    <li><a href="javascript:void(0)" routerLink="">Contact Us</a></li>
+                    <li><a href="javascript:void(0)" routerLink="">Post Query</a></li>
                 </ul>
             </div>
             <div class="col-xl-3 col-lg-4 col-md-6" style="padding-left: 100px;">
@@ -80,7 +80,7 @@
             </div>
             <div class="col-md-12 copyPrivacy" style="padding-left: 100px;">
                 <div>
-                    <h2>Copyright 2022 - MMP</h2>
+                    <h2>Copyright 2022 - Abosolut Study</h2>
                 </div>
                 <div>
                     <a href="javascript:void(0)" >Privacy Policy</a>
