--- a/src/app/home-content/home-content.component.html
+++ b/src/app/home-content/home-content.component.html
@@ -105,7 +105,7 @@
                                 <h1>K-12/Academics</h1>
                             </a>
                         </ng-container> -->
-                        <p>Wide career path begins during academic preparation. MMP helps the students to prepare
+                        <p>Wide career path begins during academic preparation. Absolute study helps the students to prepare
                             for their school examinations and board exams. Moreover, we aim to help students prepare
                             for Olympiads and Other Scholarship Exams.</p>
                         <ul>
@@ -128,7 +128,7 @@
             <div class="col-xl-4 col-lg-6 mb-3" data-aos="zoom-in" data-aos-duration="2000">
                 <a href="javascript:void(0)">
                     <div class="card h-100">
-                        <p>MMP provides a platform to let students know all the career opportunities possible. We
+                        <p>Absolute study provides a platform to let students know all the career opportunities possible. We
                             aim to give you all important information about the exams, practice tests and detailed
                             progress report to analyse yourself.</p>
                         <ul>
@@ -159,7 +159,7 @@
                             </a>
                         </ng-container>
                         <p>Get updated information about vacancies for your dream job. Our aim is to provide the
-                            learner the best and right path to build their career. Also, MMP let the learner
+                            learner the best and right path to build their career. Also, Absolute study let the learner
                             practice for their job examination and interview.</p>
                         <ul>
                             <ng-container *ngFor="let domain of jobdomains">
@@ -190,7 +190,7 @@
     </div>
     <div class="col-lg-6">
         <div class="content">
-            <h2>MMP FOR STUDENTS</h2>
+            <h2>Absolute study FOR STUDENTS</h2>
             <ul>
                 <li>
                     <i class='fas fa-map-marker-alt'></i>
@@ -257,7 +257,7 @@
                             <div class="row">
                                 <div
                                     class="col-lg-7 d-flex justify-content-lg-end justify-content-md-center justify-content-center">
-                                    <p class="testDEscription">"MMP is a great initiative with all important <br>
+                                    <p class="testDEscription">"Absolute study is a great initiative with all important <br>
                                         information and getting yourself
                                         prepared <br> for exams."</p>
                                 </div>
@@ -275,7 +275,7 @@
                             <div class="row">
                                 <div
                                     class="col-lg-7 d-flex justify-content-lg-end justify-content-md-center justify-content-center">
-                                    <p class="testDEscription">"MMP is smartly planned, and has a huge database <br>
+                                    <p class="testDEscription">"Absolute study is smartly planned, and has a huge database <br>
                                         of
                                         questions
                                         to work on. It is a complete package <br> you need to do have before exams."
@@ -315,7 +315,7 @@
                             <div class="row">
                                 <div
                                     class="col-lg-7 d-flex justify-content-lg-end justify-content-md-center justify-content-center">
-                                    <p class="testDEscription">"MMP can be your best learning companion with Sample
+                                    <p class="testDEscription">"Absolute study can be your best learning companion with Sample
                                         <br> papers and mock test to help you get better and <br>
                                         record your progress regularly."
                                     </p>
@@ -354,7 +354,7 @@
                             <div class="row">
                                 <div
                                     class="col-lg-7 d-flex justify-content-lg-end justify-content-md-center justify-content-center">
-                                    <p class="testDEscription">"I wish, we would have MMP during our preparation
+                                    <p class="testDEscription">"I wish, we would have Absolute study during our preparation
                                         <br>
                                         days. Carrying heavy books with limited question sets <br>
                                         would have been replaced with this platform."
@@ -394,9 +394,9 @@
                             <div class="row">
                                 <div
                                     class="col-lg-7 d-flex justify-content-lg-end justify-content-md-center justify-content-center">
-                                    <p class="testDEscription">"MMP platform will really help the student analyse
+                                    <p class="testDEscription">"Absolute study platform will really help the student analyse
                                         <br>
-                                        the students. I would recommend schools to adopt<br> MMP
+                                        the students. I would recommend schools to adopt<br> Absolute study
                                         platform for better learnings."
                                     </p>
                                 </div>
@@ -689,26 +689,17 @@
 <div class="row homeVideos">
     <div class="col-lg-5 mb-4 d-flex justify-content-center" data-aos="zoom-out" data-aos-duration="2000">
         <div class="card">
-            <iframe class="videoFrame" src="https://www.youtube.com/embed/VD4UJcR6nAg"  
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen>
-            </iframe>
+            <iframe class="videoFrame" src="https://www.youtube.com/embed/VKJPz5Y5I8Y?si=aVopmJmK55D3FbIk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
     <div class="col-lg-5 mb-4 d-flex justify-content-center" data-aos="zoom-out" data-aos-duration="2000">
         <div class="card">
-            <iframe class="videoFrame" src="https://www.youtube.com/embed/VD4UJcR6nAg"
-                title="YouTube video player" frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen></iframe>
+            <iframe class="videoFrame" src="https://www.youtube.com/embed/xfll3z74kK8?si=CBddSZLZyjmd3neC" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
     </div>
 </div>
 
-<div >
-</div>
-<div class="col-md-12">
+<div class="footer">
     <app-footer></app-footer>
 </div>
 </div>
