--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -73,11 +73,11 @@
                       <h2>Log In <span class="iconify" data-icon="entypo:login"></span></h2>
                         <p>
                           <span class="iconify" data-icon="eos-icons:ai-operator"></span> 
-                          Join MMP, A Single Platform for preparation of all sorts/categories of examinations. 100% Free.
+                          Join Absolute study, A Single Platform for preparation of all sorts/categories of examinations. 100% Free.
                         </p>
                         <p>
                           <span class="iconify" data-icon="eos-icons:ai-operator"></span> 
-                          MMP offers detailed information & right tool for exam preparation ranging from K-12, Olympiads, NTSE, Entrance Exams & Government Recruitment exams.
+                          Absolute study offers detailed information & right tool for exam preparation ranging from K-12, Olympiads, NTSE, Entrance Exams & Government Recruitment exams.
                         </p>
                         <p>
                           <span class="iconify" data-icon="eos-icons:ai-operator"></span>
@@ -128,13 +128,13 @@
                   <div class="signUpContentSection">
                     <h2>Register <span class="iconify" data-icon="ic:round-app-registration"></span>
                     </h2>
-                    <p *ngIf="activeCard === 'student'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Join MMP, A Single Platform for preparation of all sorts/categories of examinations. 100% Free.</p>
-                    <p *ngIf="activeCard === 'student'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> MMP offers detailed information & right tool for exam preparation ranging from K-12, Olympiads, NTSE, Entrance Exams & Goverment Recruitment exams.
+                    <p *ngIf="activeCard === 'student'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Join Absolute study, A Single Platform for preparation of all sorts/categories of examinations. 100% Free.</p>
+                    <p *ngIf="activeCard === 'student'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Absolute study offers detailed information & right tool for exam preparation ranging from K-12, Olympiads, NTSE, Entrance Exams & Goverment Recruitment exams.
                     </p>
                     <p *ngIf="activeCard === 'student'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Our AI-Enabled Make My Path section helps you to set your Goal & will recommend best path to achieve the same in minimum possible time.
                     </p>
-                    <p *ngIf="activeCard === 'teacher'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Join MMP, A Single Platform for your students to prepare all sorts/categories of examinations. 100% Free.</p>
-                    <p *ngIf="activeCard === 'teacher'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> MMP offers detailed information & right tool for exam preparation ranging from K-12, Olympiads, NTSE, Entrance Exams & Goverment Recruitment exams.
+                    <p *ngIf="activeCard === 'teacher'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Join Absolute study, A Single Platform for your students to prepare all sorts/categories of examinations. 100% Free.</p>
+                    <p *ngIf="activeCard === 'teacher'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Absolute study offers detailed information & right tool for exam preparation ranging from K-12, Olympiads, NTSE, Entrance Exams & Goverment Recruitment exams.
                     </p>
                     <p *ngIf="activeCard === 'teacher'"><span class="iconify" data-icon="eos-icons:ai-operator"></span> Our AI-Enabled Make My Path section helps your students to set their Goal & recommend best path to achieve the same in minimum possible time.
                     </p>
@@ -191,14 +191,14 @@
                               <option *ngFor="let class of classData" [value]="class.id">{{class.name}}</option>
                             </select>
                           </div>
-                          <div class="mt-1">            
+                          <!-- <div class="mt-1">            
                             <label for="">Select the group</label>              
                             <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" formControlName="user_type">
                               <option selected>Select Group</option>
                               <option value="Student">Student</option>
                               <option value="Mentor" disabled>Mentor</option>
                             </select>
-                          </div>
+                          </div> -->
                           <div id="loginError" class="mt-2" *ngIf="name && !validName">
                             <span class="text-danger">Please enter valid Name</span>
                           </div>
@@ -231,14 +231,14 @@
                               <input class="form-control mentorInput" type="password" name="registerpassword" placeholder="Enter Password"  required (input)="validateSignUpName()" formControlName="password" />
                             </div>
                           </div>
-                          <div class="mt-1">            
+                          <!-- <div class="mt-1">            
                             <label for="">Select the group</label>              
                             <select class="form-select form-select-lg mb-3" aria-label=".form-select-lg example" formControlName="user_type">
                               <option selected>Select Group</option>
                               <option value="Mentor">Mentor</option>
                               <option value="Student" disabled>Student</option>
                             </select>
-                          </div>
+                          </div> -->
                           <div id="loginError" class="mt-2" *ngIf="name && !validName">
                             <span class="text-danger">Please enter valid Name</span>
                           </div>
