Add the forms to add the class/chapter/subject/subjects parts and create new component to show the student details

--- a/src/app/exam/Admin/add-questions/add-questions.component.html
+++ b/src/app/exam/Admin/add-questions/add-questions.component.html
@@ -88,16 +88,26 @@
                             <option *ngFor="let option of options; let i = index;" [value]="option">{{ option }}</option>
                           </select>
                     </div>
-                    <div class="buttonSection row">
+                    <!-- <div class="buttonSection row">
                         <div class="col-md-6">
                             <button class="btn btn-danger form-control" (click)="resetAddQuestionForm()">Reset Question details</button>
                         </div>
                         <div class="col-md-6">
                             <button [disabled]="!addQuestionsFrom.valid" class="btn btn-success form-control" (click)="addQuestion()">Add Question</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
                 </form>
+            </div>
+        </div>
+        <div class="card-footer">
+            <div class="buttonSection row">
+                <div class="col-md-6">
+                    <button class="btn btn-danger form-control" (click)="resetAddQuestionForm()">Reset Question details</button>
+                </div>
+                <div class="col-md-6">
+                    <button [disabled]="!addQuestionsFrom.valid" class="btn btn-success form-control" (click)="addQuestion()">Add Question</button>
+                </div>
             </div>
         </div>
     </div>
