add the basic table structure to display the student details

--- a/src/app/exam/Admin/student-details/student-details.component.html
+++ b/src/app/exam/Admin/student-details/student-details.component.html
@@ -1,4 +1,232 @@
 <div class="disply-container">
-    <p>student-details works!</p>
+    <!-- <p>student-details works!</p> -->
+    <div class="studentDetails">
+        <div class="heading">
+            <h3>Student  Details-</h3>
+        </div>
+        <div class="studentInfo">
+            <div class="row">
+            <div class="col-md-3">
+                 <h6>Name- <span>Aman Kumar</span> </h6>
+            </div>
+            <div class="col-md-3">
+              <h6>Board- <span>CBSE</span> </h6>
+            </div>
+            <div class="col-md-3">
+                  <h6>class-VI</h6>
+            </div>
+            <div class="col-md-3">
+                  <h6>StudentID- <span>1221</span> </h6>
+            </div>
+            </div>
+            <div class="row">
+            <div class="col-md-3">
+                 <h6>Mobile- <span>7023383822</span></h6>
+            </div>
+            <div class="col-md-3">
+              <h6>email- <span>aman@gmail.com</span></h6>
+            </div>
+            <!-- <div class="col-md-3">
+                  <h6> <span>class-</span>VI</h6>
+            </div>
+            <div class="col-md-3">
+                  <h6>mobile- <span>7023383822</span> </h6>
+            </div> -->
+            </div>
+
+        </div>
+        <hr>
+    </div>
+    <div class="examDetails">
+        <div class="fixTableHead"> 
+            <table> 
+              <thead> 
+                <tr> 
+                  <th>Sr No</th> 
+                  <th>Subject</th> 
+                  <th>Chapter</th> 
+                  <th>Total Question</th> 
+                  <th>Attempted Questions</th> 
+                  <th>Total Marks</th> 
+                  <th>status</th> 
+                  <th>Exam Time</th> 
+                  <th>Spent Time</th> 
+                  <th>Details</th> 
+                </tr> 
+              </thead> 
+              <tbody> 
+                <tr> 
+                  <td>1</td> 
+                  <td>Physics</td> 
+                  <td>Kinematics</td> 
+                  <td>30</td> 
+                  <td>30</td> 
+                  <td>22</td> 
+                  <td>PASS</td> 
+                  <td>40 Min</td> 
+                  <td>35 Min</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                    <td>2</td> 
+                    <td>Chemistry</td> 
+                    <td>chemical reaction's</td> 
+                    <td>30</td> 
+                    <td>18</td> 
+                    <td>6</td> 
+                    <td>FAIL</td> 
+                    <td>40 Min</td> 
+                    <td>39 Min</td> 
+                    <td><button class="btn btn-outline-primary">Details</button></td> 
+                  </tr> 
+                  <tr> 
+                    <td>3</td> 
+                    <td>Biology</td> 
+                    <td>Living Beings</td> 
+                    <td>30</td> 
+                    <td>30</td> 
+                    <td>26</td> 
+                    <td>PASS</td> 
+                    <td>40 Min</td> 
+                    <td>30 Min</td> 
+                    <td><button class="btn btn-outline-primary">Details</button></td> 
+                  </tr> 
+                  <!-- <tr> 
+                    <td>4</td> 
+                    <td>214</td> 
+                    <td>214</td> 
+                    <td>ravi shastri</td> 
+                    <td>CBSC</td> 
+                    <td>IX</td> 
+                    <td>IX</td> 
+                    <td>IX</td> 
+                    <td>IX</td> 
+                    <td><button class="btn btn-outline-primary">Details</button></td> 
+                  </tr> 
+                <tr> 
+                  <td>5</td> 
+                  <td>215</td> 
+                  <td>215</td> 
+                  <td>aman singh</td> 
+                  <td>ICSC</td> 
+                  <td>X</td> 
+                  <td>X</td> 
+                  <td>X</td> 
+                  <td>X</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>6</td> 
+                  <td>216</td> 
+                  <td>216</td> 
+                  <td>vivek shukla</td> 
+                  <td>CBSC</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>7</td> 
+                  <td>217</td> 
+                  <td>217</td> 
+                  <td>dhiraj moarya</td> 
+                  <td>ICSC</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>8</td> 
+                  <td>218</td> 
+                  <td>218</td> 
+                  <td>Badal Pal</td> 
+                  <td>State Board</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>9</td> 
+                  <td>219</td> 
+                  <td>219</td> 
+                  <td>Mohit singh</td> 
+                  <td>CBSC</td> 
+                  <td>XII</td> 
+                  <td>XII</td> 
+                  <td>XII</td> 
+                  <td>XII</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>10</td> 
+                  <td>220</td> 
+                  <td>220</td> 
+                  <td>dipak sahoo</td> 
+                  <td>ICSC</td> 
+                  <td>IV</td> 
+                  <td>IV</td> 
+                  <td>IV</td> 
+                  <td>IV</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>11</td> 
+                  <td>220</td> 
+                  <td>220</td> 
+                  <td>Ajay singh</td> 
+                  <td>State Board</td> 
+                  <td>III</td> 
+                  <td>III</td> 
+                  <td>III</td> 
+                  <td>III</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>12</td> 
+                  <td>221</td> 
+                  <td>221</td> 
+                  <td>Alok kumar</td> 
+                  <td>ICSC</td> 
+                  <td>II</td> 
+                  <td>II</td> 
+                  <td>II</td> 
+                  <td>II</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>13</td> 
+                  <td>222</td> 
+                  <td>222</td> 
+                  <td>vishal lengare</td> 
+                  <td>State Board</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td>XI</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr> 
+                <tr> 
+                  <td>14</td> 
+                  <td>223</td> 
+                  <td>223</td> 
+                  <td>prakhar singh</td> 
+                  <td>ICSC</td> 
+                  <td>XIII</td> 
+                  <td>XIII</td> 
+                  <td>XIII</td> 
+                  <td>XIII</td> 
+                  <td><button class="btn btn-outline-primary">Details</button></td> 
+                </tr>  -->
+              </tbody> 
+            </table> 
+          </div>
+    </div>
+
 </div>
 
